update consumer client and sequencer logic